# water_bot

./: Cargo.toml  README.md
.cargo/: config.toml
assets/: zzz-svgrepo-com.tga
src/: graph.rs  main.rs  margin.rs
