[package]
name = "water_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.7.6"
cortex-m-rt = "0.7.1"
panic-halt = "0.2.0"
rp-pico = "0.5.0"
embedded-hal = "0.2.7"
embedded-time = "0.12.1"
embedded-graphics = "0.7.1"
epd-waveshare = "0.5.0"

